# WebServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WebServer.c  ws
include/: http_request.hpp  router.hpp  server.hpp
public/: index.html
public/about/: about.html
public/matrix/: matrix.html
src/: http_request.cpp  main.cpp  router.cpp  server.cpp
